@@ -36,7 +36,6 @@ import ee.ria.xroad.common.validation.IdentifierValidator;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.NotImplementedException;
 import org.hibernate.Hibernate;
 import org.niis.xroad.restapi.config.audit.AuditDataHelper;
 import org.niis.xroad.restapi.config.audit.RestApiAuditEvent;
@@ -62,7 +61,6 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
 import java.util.HashMap;
@@ -106,13 +104,13 @@ public class ServiceDescriptionService {
     private final ClientService clientService;
     private final ServiceChangeChecker serviceChangeChecker;
     private final EndpointTypeChangeChecker endpointTypeChangeChecker;
-    private final ServiceService serviceService;
     private final WsdlValidator wsdlValidator;
     private final UrlValidator urlValidator;
     private final OpenApiParser openApiParser;
     private final AuditDataHelper auditDataHelper;
     private final EndpointHelper endpointHelper;
     private final IdentifierValidator identifierValidator;
+    private final WsdlParser wsdlParser;
 
     /**
      * Disable 1 services
@@ -220,17 +218,17 @@ public class ServiceDescriptionService {
      * @param url
      * @param ignoreWarnings
      * @return created {@link ServiceDescriptionType}, with id populated
-     * @throws ClientNotFoundException if client with id was not found
+     * @throws ClientNotFoundException          if client with id was not found
      * @throws WsdlParser.WsdlNotFoundException if a wsdl was not found at the url
-     * @throws InvalidWsdlException if WSDL at the url was invalid
-     * @throws UnhandledWarningsException if there were warnings that were not ignored
-     * @throws InvalidUrlException if url was empty or invalid
-     * @throws InvalidServiceUrlException if the WSDL has services with invalid urls
-     * @throws WsdlUrlAlreadyExistsException conflict: another service description has same url
-     * @throws ServiceAlreadyExistsException conflict: same service exists in another SD
-     * @throws InterruptedException if the thread running the WSDL validator is interrupted. <b>The
-     * interrupted thread has already been handled with so you can choose to ignore this exception if you so
-     * please.</b>
+     * @throws InvalidWsdlException             if WSDL at the url was invalid
+     * @throws UnhandledWarningsException       if there were warnings that were not ignored
+     * @throws InvalidUrlException              if url was empty or invalid
+     * @throws InvalidServiceUrlException       if the WSDL has services with invalid urls
+     * @throws WsdlUrlAlreadyExistsException    conflict: another service description has same url
+     * @throws ServiceAlreadyExistsException    conflict: same service exists in another SD
+     * @throws InterruptedException             if the thread running the WSDL validator is interrupted. <b>The
+     *                                          interrupted thread has already been handled with so you can choose to ignore this exception
+     *                                          if you so please.</b>
      */
     public ServiceDescriptionType addWsdlServiceDescription(ClientId clientId, String url, boolean ignoreWarnings)
             throws InvalidWsdlException,
@@ -293,23 +291,16 @@ public class ServiceDescriptionService {
      * @param newServiceDescription
      * @return Only the newly created EndpointTypes
      */
-    private Collection<EndpointType> resolveNewEndpoints(ClientType client,
-                                                         ServiceDescriptionType newServiceDescription) {
+    private Collection<EndpointType> resolveNewEndpoints(ClientType client, ServiceDescriptionType newServiceDescription) {
         Map<String, EndpointType> endpointMap = new HashMap<>();
 
         // add all new endpoints into a hashmap with a combination key
-        newServiceDescription.getService().forEach(serviceType -> {
-            EndpointType endpointType = new EndpointType(serviceType.getServiceCode(), EndpointType.ANY_METHOD,
-                    EndpointType.ANY_PATH, true);
-            String endpointKey = createEndpointKey(endpointType);
-            endpointMap.put(endpointKey, endpointType);
-        });
+        newServiceDescription.getService().stream()
+                .map(serviceType -> new EndpointType(serviceType.getServiceCode(), EndpointType.ANY_METHOD, EndpointType.ANY_PATH, true))
+                .forEach(endpointType -> endpointMap.put(createEndpointKey(endpointType), endpointType));
 
         // remove all existing endpoints with an equal combination key from the map
-        client.getEndpoint().forEach(endpointType -> {
-            String endpointKey = createEndpointKey(endpointType);
-            endpointMap.remove(endpointKey);
-        });
+        client.getEndpoint().forEach(endpointType -> endpointMap.remove(createEndpointKey(endpointType)));
 
         return endpointMap.values();
     }
@@ -358,7 +349,7 @@ public class ServiceDescriptionService {
         if (!ignoreWarnings && result.hasWarnings()) {
             WarningDeviation openapiParserWarnings = new WarningDeviation(WARNING_OPENAPI_VALIDATION_WARNINGS,
                     result.getWarnings());
-            throw new UnhandledWarningsException(Arrays.asList(openapiParserWarnings));
+            throw new UnhandledWarningsException(List.of(openapiParserWarnings));
         }
 
         ClientType client = clientService.getLocalClient(clientId);
@@ -385,7 +376,7 @@ public class ServiceDescriptionService {
         endpoints.add(endpointType);
         endpoints.addAll(result.getOperations().stream()
                 .map(operation -> new EndpointType(serviceCode, operation.getMethod(), operation.getPath(), true))
-                .collect(Collectors.toList()));
+                .toList());
 
         checkDuplicateUrl(serviceDescriptionType);
         checkDuplicateServiceCodes(serviceDescriptionType);
@@ -404,7 +395,7 @@ public class ServiceDescriptionService {
      * @throws UrlAlreadyExistsException if trying to add duplicate url
      */
     private void checkDuplicateUrl(ServiceDescriptionType serviceDescription) throws UrlAlreadyExistsException {
-        Boolean hasDuplicates = serviceDescription.getClient().getServiceDescription().stream()
+        boolean hasDuplicates = serviceDescription.getClient().getServiceDescription().stream()
                 .anyMatch(other -> !serviceDescription.equals(other)
                         && serviceDescription.getUrl().equals(other.getUrl()));
 
@@ -465,10 +456,15 @@ public class ServiceDescriptionService {
      * @throws InvalidUrlException               if url is invalid
      */
     @PreAuthorize("hasAuthority('ADD_OPENAPI3')")
-    public ServiceDescriptionType addRestEndpointServiceDescription(ClientId clientId, String url,
-                                                                    String serviceCode) throws
-            ClientNotFoundException, MissingParameterException, ServiceCodeAlreadyExistsException,
-            UrlAlreadyExistsException, InvalidUrlException {
+    public ServiceDescriptionType addRestEndpointServiceDescription(ClientId clientId,
+                                                                    String url,
+                                                                    String serviceCode)
+            throws
+            ClientNotFoundException,
+            MissingParameterException,
+            ServiceCodeAlreadyExistsException,
+            UrlAlreadyExistsException,
+            InvalidUrlException {
 
         if (serviceCode == null) {
             throw new MissingParameterException("Missing ServiceCode");
@@ -515,18 +511,18 @@ public class ServiceDescriptionService {
      * @param id
      * @param url the new url
      * @return ServiceDescriptionType
-     * @throws WsdlParser.WsdlNotFoundException if a wsdl was not found at the url
-     * @throws ServiceDescriptionNotFoundException if SD with given id was not found
+     * @throws WsdlParser.WsdlNotFoundException     if a wsdl was not found at the url
+     * @throws ServiceDescriptionNotFoundException  if SD with given id was not found
      * @throws WrongServiceDescriptionTypeException if SD with given id was not a WSDL based one
-     * @throws InvalidWsdlException if WSDL at the url was invalid
-     * @throws UnhandledWarningsException if there were warnings that were not ignored
-     * @throws InvalidUrlException if url was empty or invalid
-     * @throws InvalidServiceUrlException if the WSDL has services with invalid urls
-     * @throws WsdlUrlAlreadyExistsException conflict: another service description has same url
-     * @throws ServiceAlreadyExistsException conflict: same service exists in another SD
-     * @throws InterruptedException if the thread running the WSDL validator is interrupted. <b>The
-     * interrupted thread has already been handled with so you can choose to ignore this exception if you so
-     * please.</b>
+     * @throws InvalidWsdlException                 if WSDL at the url was invalid
+     * @throws UnhandledWarningsException           if there were warnings that were not ignored
+     * @throws InvalidUrlException                  if url was empty or invalid
+     * @throws InvalidServiceUrlException           if the WSDL has services with invalid urls
+     * @throws WsdlUrlAlreadyExistsException        conflict: another service description has same url
+     * @throws ServiceAlreadyExistsException        conflict: same service exists in another SD
+     * @throws InterruptedException                 if the thread running the WSDL validator is interrupted. <b>The
+     *                                              interrupted thread has already been handled with
+     *                                              so you can choose to ignore this exception if you so  please.</b>
      */
     public ServiceDescriptionType updateWsdlUrl(Long id, String url, boolean ignoreWarnings)
             throws WsdlParser.WsdlNotFoundException, InvalidWsdlException,
@@ -591,18 +587,18 @@ public class ServiceDescriptionService {
      * @param serviceDescriptionType
      * @param ignoreWarnings
      * @return {@link ServiceDescriptionType}
-     * @throws WsdlParser.WsdlNotFoundException if a wsdl was not found at the url
-     * @throws ServiceDescriptionNotFoundException if SD with given id was not found
+     * @throws WsdlParser.WsdlNotFoundException     if a wsdl was not found at the url
+     * @throws ServiceDescriptionNotFoundException  if SD with given id was not found
      * @throws WrongServiceDescriptionTypeException if SD with given id was not a WSDL based one
-     * @throws InvalidWsdlException if WSDL at the url was invalid
-     * @throws UnhandledWarningsException if there were warnings that were not ignored
-     * @throws InvalidUrlException if url was empty or invalid
-     * @throws InvalidServiceUrlException if the WSDL has services with invalid urls
-     * @throws WsdlUrlAlreadyExistsException conflict: another service description has same url
-     * @throws ServiceAlreadyExistsException conflict: same service exists in another SD
-     * @throws InterruptedException if the thread running the WSDL validator is interrupted. <b>The
-     * interrupted thread has already been handled with so you can choose to ignore this exception if you so
-     * please.</b>
+     * @throws InvalidWsdlException                 if WSDL at the url was invalid
+     * @throws UnhandledWarningsException           if there were warnings that were not ignored
+     * @throws InvalidUrlException                  if url was empty or invalid
+     * @throws InvalidServiceUrlException           if the WSDL has services with invalid urls
+     * @throws WsdlUrlAlreadyExistsException        conflict: another service description has same url
+     * @throws ServiceAlreadyExistsException        conflict: same service exists in another SD
+     * @throws InterruptedException                 if the thread running the WSDL validator is interrupted. <b>The
+     *                                              interrupted thread has already been handled with so you can choose
+     *                                              to ignore this exception if you so  please.</b>
      */
     @PreAuthorize("hasAuthority('REFRESH_WSDL')")
     private ServiceDescriptionType refreshWSDLServiceDescription(ServiceDescriptionType serviceDescriptionType,
@@ -616,13 +612,10 @@ public class ServiceDescriptionService {
             throw new WrongServiceDescriptionTypeException("Expected description type WSDL");
         }
 
-        if (serviceDescriptionType.getType() == DescriptionType.WSDL) {
-            String wsdlUrl = serviceDescriptionType.getUrl();
-            return updateWsdlUrl(serviceDescriptionType, wsdlUrl, ignoreWarnings);
-        }
+        String wsdlUrl = serviceDescriptionType.getUrl();
+        return updateWsdlUrl(serviceDescriptionType, wsdlUrl, ignoreWarnings);
 
         // we only have two types at the moment so the type must be OPENAPI3 if we end up this far
-        throw new NotImplementedException("REST ServiceDescription refresh not implemented yet");
     }
 
     /**
@@ -639,15 +632,17 @@ public class ServiceDescriptionService {
      */
     @PreAuthorize("hasAuthority('REFRESH_OPENAPI3')")
     private ServiceDescriptionType refreshOpenApi3ServiceDescription(ServiceDescriptionType serviceDescriptionType,
-                                                                     boolean ignoreWarnings) throws WrongServiceDescriptionTypeException,
-            UnhandledWarningsException, OpenApiParser.ParsingException, InvalidUrlException,
+                                                                     boolean ignoreWarnings)
+            throws WrongServiceDescriptionTypeException,
+            UnhandledWarningsException,
+            OpenApiParser.ParsingException, InvalidUrlException,
             UnsupportedOpenApiVersionException {
 
         if (!serviceDescriptionType.getType().equals(DescriptionType.OPENAPI3)) {
             throw new WrongServiceDescriptionTypeException("Expected description type OPENAPI3");
         }
 
-        if (serviceDescriptionType.getService().get(0) == null) {
+        if (serviceDescriptionType.getService().getFirst() == null) {
             throw new DeviationAwareRuntimeException(SERVICE_NOT_FOUND_ERROR_MSG + serviceDescriptionType.getId());
         }
 
@@ -656,7 +651,7 @@ public class ServiceDescriptionService {
         serviceDescriptionType.setRefreshedDate(new Date());
 
         parseOpenApi3ToServiceDescription(serviceDescriptionType.getUrl(),
-                serviceDescriptionType.getService().get(0).getServiceCode(),
+                serviceDescriptionType.getService().getFirst().getServiceCode(),
                 ignoreWarnings,
                 serviceDescriptionType);
 
@@ -687,6 +682,10 @@ public class ServiceDescriptionService {
         }
 
         ServiceDescriptionType serviceDescription = getServiceDescriptiontype(id);
+        if (serviceDescription == null) {
+            throw new ServiceDescriptionNotFoundException("ServiceDescription with id: " + id + " wasn't found");
+        }
+
         auditDataHelper.put(serviceDescription.getClient().getIdentifier());
         auditDataHelper.putServiceDescriptionUrl(serviceDescription);
         auditDataHelper.put(RestApiAuditProperty.URL_NEW, url);
@@ -696,17 +695,13 @@ public class ServiceDescriptionService {
 
         validateUrl(serviceDescription.getUrl());
 
-        if (serviceDescription == null) {
-            throw new ServiceDescriptionNotFoundException("ServiceDescription with id: " + id + " wasn't found");
-        }
-
-        if (serviceDescription.getService().get(0) == null) {
+        if (serviceDescription.getService().getFirst() == null) {
             throw new DeviationAwareRuntimeException(SERVICE_NOT_FOUND_ERROR_MSG + serviceDescription.getId());
         }
 
         serviceDescription.setRefreshedDate(new Date());
         serviceDescription.setUrl(url);
-        serviceDescription.getService().get(0).setUrl(url);
+        serviceDescription.getService().getFirst().setUrl(url);
 
         updateServiceCodes(restServiceCode, newRestServiceCode, serviceDescription);
 
@@ -761,7 +756,7 @@ public class ServiceDescriptionService {
             newRestServiceCode = restServiceCode;
         }
 
-        if (serviceDescription.getService().get(0) == null) {
+        if (serviceDescription.getService().getFirst() == null) {
             throw new DeviationAwareRuntimeException(SERVICE_NOT_FOUND_ERROR_MSG + serviceDescription.getId());
         }
 
@@ -790,9 +785,12 @@ public class ServiceDescriptionService {
      * @throws UnhandledWarningsException         if ignoreWarnings is false and parser returns warnings from openapi
      * @throws UnsupportedOpenApiVersionException if the openapi version is not supported
      */
-    private void parseOpenApi3ToServiceDescription(String url, String serviceCode, boolean ignoreWarnings,
-                                                   ServiceDescriptionType serviceDescription) throws
-            OpenApiParser.ParsingException, UnhandledWarningsException, UnsupportedOpenApiVersionException {
+    private void parseOpenApi3ToServiceDescription(String url, String serviceCode,
+                                                   boolean ignoreWarnings,
+                                                   ServiceDescriptionType serviceDescription)
+            throws OpenApiParser.ParsingException,
+            UnhandledWarningsException,
+            UnsupportedOpenApiVersionException {
         OpenApiParser.Result result = openApiParser.parse(url);
 
         // Create endpoints from parsed results
@@ -916,26 +914,23 @@ public class ServiceDescriptionService {
      * it just updates to the same URL value
      *
      * @param serviceDescriptionType
-     * @param url the new url
+     * @param url                    the new url
      * @return ServiceDescriptionType
-     * @throws WsdlParser.WsdlNotFoundException if a wsdl was not found at the url
+     * @throws WsdlParser.WsdlNotFoundException     if a wsdl was not found at the url
      * @throws WrongServiceDescriptionTypeException if SD with given id was not a WSDL based one
-     * @throws InvalidWsdlException if WSDL at the url was invalid
-     * @throws UnhandledWarningsException if there were warnings that were not ignored
-     * @throws InvalidUrlException if url was empty or invalid
-     * @throws InvalidServiceUrlException if the WSDL has services with invalid urls
-     * @throws WsdlUrlAlreadyExistsException conflict: another service description has same url
-     * @throws ServiceAlreadyExistsException conflict: same service exists in another SD
-     * @throws InterruptedException if the thread running the WSDL validator is interrupted. <b>The
-     * interrupted thread has already been handled with so you can choose to ignore this exception if you so
-     * please.</b>
+     * @throws InvalidWsdlException                 if WSDL at the url was invalid
+     * @throws UnhandledWarningsException           if there were warnings that were not ignored
+     * @throws InvalidUrlException                  if url was empty or invalid
+     * @throws WsdlUrlAlreadyExistsException        conflict: another service description has same url
+     * @throws ServiceAlreadyExistsException        conflict: same service exists in another SD
+     * @throws InterruptedException                 if the thread running the WSDL validator is interrupted. <b>The
+     *                                              interrupted thread has already been handled with so you can choose
+     *                                              to ignore this exception if you so  please.</b>
      */
-    private ServiceDescriptionType updateWsdlUrl(ServiceDescriptionType serviceDescriptionType, String url,
-                                                 boolean ignoreWarnings)
+    private ServiceDescriptionType updateWsdlUrl(ServiceDescriptionType serviceDescriptionType, String url, boolean ignoreWarnings)
             throws InvalidWsdlException, WsdlParser.WsdlNotFoundException,
             WrongServiceDescriptionTypeException, UnhandledWarningsException,
-            ServiceAlreadyExistsException, InvalidUrlException, WsdlUrlAlreadyExistsException, InterruptedException,
-            InvalidServiceUrlException {
+            ServiceAlreadyExistsException, InvalidUrlException, WsdlUrlAlreadyExistsException, InterruptedException {
 
         auditDataHelper.put(serviceDescriptionType.getClient().getIdentifier());
         Map<RestApiAuditProperty, Object> wsdlAuditData = auditDataHelper.putMap(RestApiAuditProperty.WSDL);
@@ -974,8 +969,7 @@ public class ServiceDescriptionService {
         wsdlAuditData.put(RestApiAuditProperty.SERVICES_DELETED, serviceChanges.getRemovedFullServiceCodes());
 
         // collect all types of warnings, throw Exception if not ignored
-        List<WarningDeviation> allWarnings = new ArrayList<>();
-        allWarnings.addAll(wsdlProcessingResult.getWarnings());
+        List<WarningDeviation> allWarnings = new ArrayList<>(wsdlProcessingResult.getWarnings());
         if (!serviceChanges.isEmpty()) {
             allWarnings.addAll(createServiceChangeWarnings(serviceChanges));
         }
@@ -989,13 +983,13 @@ public class ServiceDescriptionService {
         List<String> newServiceCodes = newServices
                 .stream()
                 .map(ServiceType::getServiceCode)
-                .collect(Collectors.toList());
+                .toList();
 
         // service codes that will be REMOVED
         List<String> removedServiceCodes = serviceChanges.getRemovedServices()
                 .stream()
                 .map(ServiceType::getServiceCode)
-                .collect(Collectors.toList());
+                .toList();
 
         // replace all old services with the new ones
         serviceDescriptionType.getService().clear();
@@ -1092,7 +1086,7 @@ public class ServiceDescriptionService {
         List<ServiceType> newServices = parsedServices
                 .stream()
                 .map(serviceInfo -> serviceInfoToServiceType(serviceInfo, serviceDescriptionType))
-                .collect(Collectors.toList());
+                .toList();
 
         serviceDescriptionType.getService().addAll(newServices);
 
@@ -1124,9 +1118,9 @@ public class ServiceDescriptionService {
     }
 
     private Collection<WsdlParser.ServiceInfo> parseWsdl(String url) throws WsdlParser.WsdlNotFoundException,
-            WsdlParser.WsdlParseException, InvalidServiceUrlException {
+            WsdlParser.WsdlParseException {
         Collection<WsdlParser.ServiceInfo> parsedServices;
-        parsedServices = WsdlParser.parseWSDL(url);
+        parsedServices = wsdlParser.parseWSDL(url);
         return parsedServices;
     }
 
@@ -1208,7 +1202,6 @@ public class ServiceDescriptionService {
      * @throws WsdlParser.WsdlNotFoundException if a wsdl was not found at the url
      * @throws InvalidUrlException              if url was empty or invalid
      * @throws InvalidWsdlException             if wsdl was invalid (either parsing or validation)
-     * @throws InvalidServiceUrlException       if the WSDL has services with invalid urls
      * @throws WsdlUrlAlreadyExistsException    conflict: another service description has same url
      * @throws ServiceAlreadyExistsException    conflict: same service exists in another SD
      */
@@ -1218,7 +1211,7 @@ public class ServiceDescriptionService {
             InvalidWsdlException,
             InvalidUrlException,
             WsdlUrlAlreadyExistsException,
-            ServiceAlreadyExistsException, InterruptedException, InvalidServiceUrlException {
+            ServiceAlreadyExistsException, InterruptedException {
 
         WsdlProcessingResult result = new WsdlProcessingResult();
 
@@ -1237,7 +1230,7 @@ public class ServiceDescriptionService {
         checkForExistingServices(client, parsedServices, updatedServiceDescriptionId);
 
         // validate wsdl
-        List<String> warningStrings = null;
+        List<String> warningStrings;
         try {
             warningStrings = validateWsdl(url);
         } catch (WsdlValidator.WsdlValidatorNotExecutableException e) {
